# regulator

./: .gitignore  README.md
audio-plugin/: .clang-format  CMakeLists.txt  FeatureExtractor.h  ModelProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  Regulator.h
ml/: README.md  collect_data.py  label_data.py  pyproject.toml  test_regulator.py  train_model.py
ml/modules/: CMakeLists.txt
ml/modules/python/: __init__.py
ml/modules/src/: AudioFeatures.cpp
shared/: FeatureExtractor.h
