[project]
name = "regulator"
version = "0.1.0"
requires-python = "==3.12.12"
dependencies = [
    "keras",
    "librosa",
    "matplotlib",
    "numpy",
    "pillow",
    "protobuf",
    "pyparsing",
    "pyyaml",
    "requests",
    "scikit-learn",
    "scipy",
    "six",
    "sounddevice",
    "tensorflow-macos",
    "tensorflow-metal",
    "werkzeug",
    "wheel",
    "wrapt",
]
